--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring :
   datasource:
     url : jdbc:mysql://localhost:3306/event_reg_db
     username : root
-    password : mysql
+    password : SScc12@#12
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa :
